# vulkan_font_engine

./: .gitignore  .gitmodules  CLAUDE.md  README.md  logcat.bat  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: app.cc  app.hh  demo.cc  font.cc  font.hh  glyphs.cc  glyphs.hh  msdf.cc  msdf.hh  renderer.cc  renderer.hh  utf8.hh
app/src/main/shaders_src/: chroma_denoise.slang  composite_frag.slang  composite_vert.slang  coverage.slang  debayer_isp.slang  denoise_bayer.slang  green_isp.slang  msdf_frag.slang  msdf_vert.slang  nlm_bayer.slang  overlay_frag.slang  overlay_vert.slang  temporal_denoise.slang  tiling.slang
cmake/: VfeShaders.cmake
core/: CMakeLists.txt  asset_loader.hh  asset_reader.hh  curve_rasterizer.cc  curve_rasterizer.hh  font.cc  glyphs.cc  gpu_util.cc  gpu_util.hh  log.hh  msdf.cc  msdf.hh  msdf_renderer.cc  msdf_renderer.hh  renderer.cc  renderer.hh
platform/android/: CMakeLists.txt  android_platform.cc  android_platform.hh  app.cc  app.hh  demo.cc  demo.hh  install.bat  main.cc
platform/android/app/: build.gradle
shaders_src/: composite_frag.slang  composite_vert.slang  coverage.slang  msdf_frag.slang  msdf_vert.slang  tiling.slang
tools/atlas_gen/: CMakeLists.txt  atlas_gen.cc  build.ps1  math_table.cc  math_table.hh
tools/atlas_gen/fonts/: README.md
tools/coverage_test/: CMakeLists.txt  build.ps1  coverage_test.cc
tools/min_text_size/: CMakeLists.txt  build.ps1  min_text_size.cc
tools/msdf_readability/: CMakeLists.txt  build.ps1  msdf_readability.cc
